--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@google-cloud/speech": "^2.3.1"
   }
 }
