--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@types/node": "^11.11.0",
     "@types/socket.io-client": "^1.4.32",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "base64-arraybuffer": "^0.1.5",
     "css-loader": "^2.1.0",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
