--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node speech.js",
     "dev-linux": "$NODE_PATH/.bin/cross-env NODE_ENV=development $NODE_PATH/.bin/webpack-dev-server -d --devtool source-map --https --port 8081 --host 0.0.0.0",
+    "release-linux": "$NODE_PATH/.bin/cross-env NODE_ENV=production $NODE_PATH/.bin/webpack --progress --profile --colors",
     "dev": "%NODE_PATH%/.bin/cross-env NODE_ENV=development %NODE_PATH%/.bin/webpack-dev-server -d --devtool source-map --https --port 8081 --host 0.0.0.0",
     "release": "%NODE_PATH%/.bin/cross-env NODE_ENV=production %NODE_PATH%/.bin/webpack --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
