--- a/package.json
+++ b/package.json
@@ -1,42 +1,12 @@
 {
-  "name": "speech-to-text",
+  "name": "voice-recognizer",
   "description": "",
   "version": "0.0.1",
   "author": "Hai Bacti",
   "license": "MIT",
   "private": true,
-  "scripts": {
-    "start": "node speech.js",
-    "dev-linux": "$NODE_PATH/.bin/cross-env NODE_ENV=development $NODE_PATH/.bin/webpack-dev-server -d --devtool source-map --https --port 8081 --host 0.0.0.0",
-    "release-linux": "$NODE_PATH/.bin/cross-env NODE_ENV=production $NODE_PATH/.bin/webpack --progress --profile --colors",
-    "dev": "%NODE_PATH%/.bin/cross-env NODE_ENV=development %NODE_PATH%/.bin/webpack-dev-server -d --devtool source-map --https --port 8081 --host 0.0.0.0",
-    "release": "%NODE_PATH%/.bin/cross-env NODE_ENV=production %NODE_PATH%/.bin/webpack --progress --profile --colors",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@types/node": "^11.11.0",
-    "@types/socket.io-client": "^1.4.32",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.5",
-    "base64-arraybuffer": "^0.1.5",
-    "css-loader": "^2.1.0",
-    "fs-extra": "^7.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "node-uuid": "^1.4.8",
-    "nodemon": "^1.18.10",
-    "preact": "^8.4.2",
-    "rtcpeerconnection": "^8.4.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3333",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "uuid": "^3.3.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "axios": "^0.18.0"
   }
 }
